--- a/IoGame/iogame-socket/src/main/resources/templates/near.html
+++ b/IoGame/iogame-socket/src/main/resources/templates/near.html
@@ -7,14 +7,13 @@
 </head>
 <body>
 <div id="box" style="width:100%;height:800px;border:solid 1px #000;">
-    <div id="switcher" style="width:10px;height:10px;border:solid 2px #F00;">
-    </div>
+    <div id="switcher" style="width:10px;height:10px;border:solid 2px #F00;"></div>
 </div>
 
 <script type="text/javascript" th:src="@{/jquery-1.11.3.min.js}"></script>
 <script type="text/javascript" th:src="@{/websocket.js}"></script>
 <script>
-    $("#switcher").css("transform", "translate(100px, 100px)");
+    $("#switcher").css("transform", "translate(50px, 100px)");
 
     $(document).keydown(function (event) {
         var keyNum = event.which;  //获取键值
@@ -22,21 +21,39 @@
         Item.css({position: 'relative'}); //设置position
         switch (keyNum) { //判断按键
             case 37:
-                Item.animate({left: '-=5px'},0);
+                Item.animate({left: '-=5px'}, 0);
                 break;
             case 38:
-                Item.animate({top: '-=5px'},0);
+                Item.animate({top: '-=5px'}, 0);
                 break;
             case 39:
-                Item.animate({left: '+=5px'},0);
+                Item.animate({left: '+=5px'}, 0);
                 break;
             case 40:
-                Item.animate({top: '+=5px'},0);
+                Item.animate({top: '+=5px'}, 0);
                 break;
             default:
                 break;
         }
     });
+
+    function refreshUser(userId, x, y) {
+        if ($('#userItem_' + userId).length) {
+            // 元素存在，刷新
+            $('#userItem_' + userId).css("transform", "translate(" + x + "px, " + y + "px)");
+        } else {
+            // 元素不存在，添加
+            addNewUserPlayer(userId, x, y)
+        }
+    }
+
+    function addNewUserPlayer(userId, x, y) {
+        $('#box').append('<div id="userItem_' + userId +'" style="width:10px;height:10px;border:solid 2px #0F0;"></div>').css("transform", "translate(" + x + "px, " + y + "px)");
+    }
+
+    function removeUser(userId) {
+        $('#userItem_' + userId).remove();
+    }
 </script>
 </body>
 </html>
